--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="pages/index.css">
 </head>
 
-<body>
+<body class="root">
  <div class="page">
     <header class="header">
         <a href="#" class="header__logo"></a>
@@ -15,8 +15,17 @@
             <a href="#" class="header__lang-link">Ru</a>
             <a href="#" class="header__lang-link">En</a>
         </div>
-
     </header>
+
+    <section class="lead">
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <div class="lead__image">
+            <img class="lead__image-map" src="images/Group 4.svg" alt="Карта путешествия">
+        </div>
+         <p class="lead__caption">ваша полка — верхняя</p>
+    </section>
+
  </div>
 </body>
 </html>
