blok -photo-grid- done

--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
         </article>
     </section>
 
+    <section class="photo-grid">
+        <img class="photo-grid__item" src="images/1. Вид из окна купе.jpg" alt="Вид из окна купе">
+        <img class="photo-grid__item" src="images/2.Облака над горами.jpg" alt="Облака над горами">
+        <img class="photo-grid__item" src="images/3. Лиса на закате.jpg" alt="Лиса на закате">
+        <img class="photo-grid__item" src="images/4. Лес в тумане.jpg" alt="Лес в тумане">
+        <img class="photo-grid__item" src="images/5. Лед Байкала.jpg" alt="Лед Байкала">
+        <img class="photo-grid__item" src="images/6. Море.jpg" alt="Море">
+        <img class="photo-grid__item" src="images/7. Горы.jpg" alt="Горы">
+        <img class="photo-grid__item" src="images/8. Буи.jpg" alt="Буи">
+        <img class="photo-grid__item" src="images/9. Горы в тумане.jpg" alt="Горы в тумане">
+        <img class="photo-grid__item" src="images/10. Поле и горы.jpg" alt="Поле и горы">
+        <img class="photo-grid__item" src="images/11. Скалы и море.jpg" alt="Скалы и море">
+        <img class="photo-grid__item" src="images/12. Туман.jpg" alt="Туман">
+    </section>
+
  </div>
 </body>
 </html>
