--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <title>Путешествие по России</title>
+  <title>Путешествия по России</title>
   <link rel="stylesheet" href="pages/index.css">
 </head>
 
@@ -147,9 +147,18 @@
                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
         </div>
-
     </section>
 
+    <footer class="footer">
+        <div class="footer__container-link">
+            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+            <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+            <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+        </div>
+        <p class="footer__copyright">&copy;2020. Екатерина Леонова</p>
+    </footer>
  </div>
 </body>
 </html>
