--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
         </div>
     </section>
 
+    <section class="cover">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+    </section>
+
     <footer class="footer">
         <div class="footer__container-link">
             <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
