--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <div class="lead__image">
-            <img class="lead__image-map" src="images/Group 4.svg" alt="Карта путешествия">
+            <img class="lead__image-map" src="images/Group_4.svg" alt="Карта путешествия">
         </div>
          <p class="lead__caption">ваша полка — верхняя</p>
     </section>
 
-    <section></section>
+    <section aria-label="Секция с вводной статьей">
         <article class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, 
@@ -46,19 +46,19 @@
         </article>
     </section>
 
-    <section class="photo-grid">
-        <img class="photo-grid__item" src="images/1. Вид из окна купе.jpg" alt="Вид из окна купе">
-        <img class="photo-grid__item" src="images/2.Облака над горами.jpg" alt="Облака над горами">
-        <img class="photo-grid__item" src="images/3. Лиса на закате.jpg" alt="Лиса на закате">
-        <img class="photo-grid__item" src="images/4. Лес в тумане.jpg" alt="Лес в тумане">
-        <img class="photo-grid__item" src="images/5. Лед Байкала.jpg" alt="Лед Байкала">
-        <img class="photo-grid__item" src="images/6. Море.jpg" alt="Море">
-        <img class="photo-grid__item" src="images/7. Горы.jpg" alt="Горы">
-        <img class="photo-grid__item" src="images/8. Буи.jpg" alt="Буи">
-        <img class="photo-grid__item" src="images/9. Горы в тумане.jpg" alt="Горы в тумане">
-        <img class="photo-grid__item" src="images/10. Поле и горы.jpg" alt="Поле и горы">
-        <img class="photo-grid__item" src="images/11. Скалы и море.jpg" alt="Скалы и море">
-        <img class="photo-grid__item" src="images/12. Туман.jpg" alt="Туман">
+    <section class="photo-grid" aria-label="Галерея">
+        <img class="photo-grid__item" src="images/1.From_the_train.jpg" alt="Вид из окна купе">
+        <img class="photo-grid__item" src="images/2.Clouds.jpg" alt="Облака над горами">
+        <img class="photo-grid__item" src="images/3.Sunset.jpg" alt="Лиса на закате">
+        <img class="photo-grid__item" src="images/4.Forest.jpg" alt="Лес в тумане">
+        <img class="photo-grid__item" src="images/5.Ice_lake.jpg" alt="Лед Байкала">
+        <img class="photo-grid__item" src="images/6.The_sea.jpg" alt="Море">
+        <img class="photo-grid__item" src="images/7.Mountains.jpg" alt="Горы">
+        <img class="photo-grid__item" src="images/8.Coast.jpg" alt="Буи">
+        <img class="photo-grid__item" src="images/9.from_above.jpg" alt="Горы в тумане">
+        <img class="photo-grid__item" src="images/10.Distant_mountain.jpg" alt="Поле и горы">
+        <img class="photo-grid__item" src="images/11.Rocks_and_the_sea.jpg" alt="Скалы и море">
+        <img class="photo-grid__item" src="images/12.Mist.jpg" alt="Туман">
     </section>
 
     <section class="places">
@@ -86,7 +86,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a> 
             </div>
-            <img class="place__image" src="images/Кольский.jpg" alt="Кольский">
+            <img class="place__image" src="images/Kolski.jpg" alt="Кольский">
             <div class="place__container-paragraph">
                 <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                 тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -104,7 +104,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a> 
             </div>
-            <img class="place__image" src="images/Алтай.jpg" alt="Алтай">
+            <img class="place__image" src="images/Altai.jpg" alt="Алтай">
             <div class="place__container-paragraph">
                 <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, 
@@ -122,7 +122,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a> 
             </div>
-            <img class="place__image" src="images/Зимний Байкал.jpg" alt="Зимний Байкал">
+            <img class="place__image" src="images/Baikal_winter.jpg" alt="Зимний Байкал">
             <div class="place__container-paragraph">
                 <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -138,7 +138,7 @@
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru</a> 
             </div>
-            <img class="place__image" src="images/Карелия.jpg" alt="Карелия">
+            <img class="place__image" src="images/Karelia.jpg" alt="Карелия">
             <div class="place__container-paragraph">
                 <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница 
                 не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых 
@@ -150,7 +150,7 @@
     </section>
 
     <section class="cover">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала<br>«на собаках»</a>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
     </section>
 
