--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
     </section>
 
-    <section class="cover">
+    <section class="cover" aria-label="Необычная ссылка">
         <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала<br>«на собаках»</a>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
     </section>
