ПР3. 1-ая итерация

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
 
     <section class="cover" aria-label="Необычная ссылка">
-        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала<br>«на собаках»</a>
+        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
     </section>
 
